decreased menu height to prevent covering button

--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -24,7 +24,7 @@
 
 .menuContainer {
   /* font-family: var(--primary-font-fam); */
-  height: 100%;
+  /* height: 100%; */
   position: fixed;
   top: 0;
   right: 0;
